diverses modifications sur HP/contact/edp-audio

--- a/span-template/layouts/topBar.phtml
+++ b/span-template/layouts/topBar.phtml
@@ -9,21 +9,21 @@
         <div class="top-bar">
           <div class="container">
             <div class="row">
-              <div class="col-md-7 col-sm-9">
+              <div class="col-md-8 col-sm-9">
                 <!-- Start Contact Info -->
                 <ul class="contact-details">
                   <li>
                     <a href="#">
                     <i class="icon-pointer">
                     </i>
-                    New South wales, Sydaney
+                  109 avenue Aristide Briand – CS 90042 – 92541 Montrouge cedex
                     </a>
                   </li>
                   <li>
                     <a href="#">
                     <i class="icon-call-out">
                     </i>
-                    Call Us: (123) 456- 789
+                    01.41.17.73.90
                     </a>
                   </li>
                   <li>
@@ -36,10 +36,10 @@
                 </ul>
                 <!-- End Contact Info -->
               </div>
-              <div class="col-md-5 col-sm-3">
+              <div class="col-md-4 col-sm-3">
                 <!-- Start Social Links -->
                 <ul class="social-list">
-                  <li>
+              <!--<li>
                     <a class="facebook itl-tooltip" data-placement="bottom" title="Facebook" href="#">
                     <i class="fa fa-facebook">
                     </i>
@@ -62,9 +62,9 @@
                     <i class="fa fa-dribbble">
                     </i>
                     </a>
-                  </li>
+                  </li>-->
                   <li>
-                    <a class="linkdin itl-tooltip" data-placement="bottom" title="Linkedin" href="#">
+                    <a class="linkdin itl-tooltip" data-placement="bottom" title="Linkedin" href="https://fr.linkedin.com/in/edp-sant%C3%A9- 6b78b4a5">
                     <i class="fa fa-linkedin">
                     </i>
                     </a>
@@ -77,4 +77,3 @@
         </div>
         <!-- End Top Bar -->
         <!-- Start  Logo & Naviagtion  -->
-  
