changement lien linkedin et 1ere modification du menu

--- a/span-template/layouts/nav.phtml
+++ b/span-template/layouts/nav.phtml
@@ -37,184 +37,59 @@
                   <a class="active" href="index.php">
                   Home
                   </a>
-                  <ul class="dropdown">
-                    <li>
-                      <a class="active" href="index.php">
-                      Home Main Version
-                      </a>
-                    </li>
-                    <li>
-                      <a href="index-01.html">
-                      Home Version 1
-                      </a>
-                    </li>
-                    <li>
-                      <a href="index-02.html">
-                      Home Version 2
-                      </a>
-                    </li>
-                    <li>
-                      <a href="index-03.html">
-                      Home Version 3
-                      </a>
-                    </li>
-                    <li>
-                      <a href="index-04.html">
-                      Home Version 4
-                      </a>
-                    </li>
-                    <li>
-                      <a href="index-05.html">
-                      Home Version 5
-                      </a>
-                    </li>
-                    <li>
-                      <a href="index-06.html">
-                      Home Version 6
-                      </a>
-                    </li>
-                    <li>
-                      <a href="index-07.html">
-                      Home Version 7
-                      </a>
-                    </li>
-                  </ul>
                 </li>
                 <li>
                   <a href="about.html">
-                  Pages
+                    Nos magazines
                   </a>
                   <ul class="dropdown">
                     <li>
                       <a href="about.html">
-                      About
+                        Audiologie
                       </a>
+                      <ul class="sup-dropdown">
+                        <li>
+                          <a href="audio-infos.html">
+                            Audio infos
+                          </a>
+                        </li>
+                        <li>
+                          <a href="audio-infos.html">
+                            Audiology infos
+                          </a>
+                        </li>
+                      </ul>
                     </li>
                     <li>
                       <a href="services.html">
-                      Services
+                        Biologie
                       </a>
                     </li>
                     <li>
                       <a href="team.html">
-                      Team Members
+                        Dentaire
                       </a>
                     </li>
                     <li>
                       <a href="right-sidebar.html">
-                      Right Sidebar
+                        Nutrition
                       </a>
+                      <ul class="sup-dropdown">
+                        <li>
+                          <a href="audio-infos.html">
+                            Nutrition infos
+                          </a>
+                        </li>
+                        <li>
+                          <a href="audio-infos.html">
+                            Nutrition infos collectivités
+                          </a>
+                        </li>
+                      </ul>
                     </li>
                     <li>
                       <a href="left-sidebar.html">
-                      Left Sidebar
-                      </a>
-                    </li>
-                    <li>
-                      <a href="faq.html">
-                      FAQ Page
-                      </a>
-                    </li>
-                    <li>
-                      <a href="404.html">
-                      404 Page
-                      </a>
-                    </li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="#">
-                  Shortcodes
-                  </a>
-                  <ul class="dropdown">
-                    <li>
-                      <a href="tabs.html">
-                      Tabs
-                      </a>
-                    </li>
-                    <li>
-                      <a href="buttons.html">
-                      Buttons
-                      </a>
-                    </li>
-                    <li>
-                      <a href="action-box.html">
-                      Action Box
-                      </a>
-                    </li>
-                    <li>
-                      <a href="testimonials.html">
-                      Testimonials
-                      </a>
-                    </li>
-                    <li>
-                      <a href="latest-posts.html">
-                      Latest Posts
-                      </a>
-                    </li>
-                    <li>
-                      <a href="latest-projects.html">
-                      Latest Projects
-                      </a>
-                    </li>
-                    <li>
-                      <a href="pricing.html">
-                      Pricing Tables
-                      </a>
-                    </li>
-                    <li>
-                      <a href="accordion-toggles.html">
-                      Accordion & Toggles
-                      </a>
-                    </li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="portfolio-3.html">
-                  Portfolio
-                  </a>
-                  <ul class="dropdown">
-                    <li>
-                      <a href="portfolio-2.html">
-                      2 Columns
-                      </a>
-                    </li>
-                    <li>
-                      <a href="portfolio-3.html">
-                      3 Columns
-                      </a>
-                    </li>
-                    <li>
-                      <a href="portfolio-4.html">
-                      4 Columns
-                      </a>
-                    </li>
-                    <li>
-                      <a href="single-project.php">
-                      Single Project
-                      </a>
-                    </li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="blog.html">
-                  Blog
-                  </a>
-                  <ul class="dropdown">
-                    <li>
-                      <a href="blog.html">
-                      Blog - right Sidebar
-                      </a>
-                    </li>
-                    <li>
-                      <a href="blog-left-sidebar.html">
-                      Blog - Left Sidebar
-                      </a>
-                    </li>
-                    <li><a href="blog-full-width.html">Blog - Full Width</a></li>
-                    <li>
-                      <a href="single-post.html">
-                      Blog Single Post
+                        Pharmacie
                       </a>
                     </li>
                   </ul>
