--- a/span-template/layouts/nav.phtml
+++ b/span-template/layouts/nav.phtml
@@ -1,3 +1,7 @@
+<?php
+$url =($_SERVER['REQUEST_URI']);
+$page = explode('/', $url);
+ ?>
 <div class="navbar navbar-default navbar-top">
           <div class="container">
             <div class="navbar-header">
@@ -34,7 +38,7 @@
               <!-- Start Navigation List -->
               <ul class="nav navbar-nav navbar-right">
                 <li>
-                  <a class="active" href="index.php">
+                  <?= ($page[3] == "index.php") ?  "<a href='index.php' class='active'>" :  "<a href='index.php'>";?>
                   Home
                   </a>
                 </li>
@@ -44,17 +48,17 @@
                   </a>
                   <ul class="dropdown">
                     <li>
-                      <a href="about.html">
+                      <a href="#">
                         Audiologie
                       </a>
                       <ul class="sup-dropdown">
                         <li>
-                          <a href="audio-infos.html">
+                          <a href="audio-infos.php">
                             Audio infos
                           </a>
                         </li>
                         <li>
-                          <a href="audio-infos.html">
+                          <a href="audiology.php">
                             Audiology infos
                           </a>
                         </li>
@@ -71,7 +75,7 @@
                       </a>
                     </li>
                     <li>
-                      <a href="right-sidebar.html">
+                      <a href="#">
                         Nutrition
                       </a>
                       <ul class="sup-dropdown">
@@ -95,7 +99,7 @@
                   </ul>
                 </li>
                 <li>
-                  <a href="contact.php">
+                  <?= ($page[3] == "contact.php") ?  "<a href='contact.php' class='active'>" :  "<a href='contact.php'>";?>
                   Contact
                   </a>
                 </li>
