--- a/span-template/layouts/topBar.phtml
+++ b/span-template/layouts/topBar.phtml
@@ -9,7 +9,7 @@
         <div class="top-bar">
           <div class="container">
             <div class="row">
-              <div class="col-md-8 col-sm-9">
+              <div class="col-md-10 col-sm-9">
                 <!-- Start Contact Info -->
                 <ul class="contact-details">
                   <li>
@@ -28,6 +28,12 @@
                   </li>
                   <li>
                     <a href="#">
+                      <i class="fa fa-fax" aria-hidden="true"></i>
+                  +33 (0)1.41.17.73.90
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
                     <i class="icon-envelope">
                     </i>
                     Email@example.com
@@ -36,7 +42,7 @@
                 </ul>
                 <!-- End Contact Info -->
               </div>
-              <div class="col-md-4 col-sm-3">
+              <div class="col-md-2 col-sm-3">
                 <!-- Start Social Links -->
                 <ul class="social-list">
               <!--<li>
