--- a/span-template/assets/css/responsive.css
+++ b/span-template/assets/css/responsive.css
@@ -440,3 +440,10 @@
     top: 30%;
   }
 }
+
+@media (min-width: 1220px) and (max-width: 1920px) {
+    .boxed-page{ width:1220px;}
+    .boxed-page header {
+      width: 1220px;
+    }
+}
