--- a/span-template/layouts/nav.phtml
+++ b/span-template/layouts/nav.phtml
@@ -49,13 +49,15 @@ $page = explode('/', $url);
                   </a>
                 </li>
                 <li>
-                  <a href="#">
+
+                  <?= (substr_compare($page[3],"single-project.php",0,10) === 0) ?  "<a href='#' class='active'>" :  "<a href='#'>";?>
                     Nos magazines
                   </a>
                   <ul class="dropdown">
                     <?php $i = 0;?>
                     <?php foreach ($sector as $pole => $value):?>
                     <li>
+
                       <a href="#">
                       <?php echo $nav->getNavLevel0Name($i)?>
                       </a>
