--- a/span-template/layouts/nav.phtml
+++ b/span-template/layouts/nav.phtml
@@ -87,194 +87,39 @@ $page = explode('/', $url);
           <!-- Mobile Menu Start -->
           <ul class="wpb-mobile-menu">
             <li>
-              <a class="active" href="index.php">
+              <?= ($page[3] == "index.php") ?  "<a href='index.php' class='active'>" :  "<a href='index.php'>";?>
               Home
               </a>
-              <ul class="dropdown">
-                <li>
-                  <a class="active" href="index.html">
-                  Home Main Version
-                  </a>
-                </li>
-                <li>
-                  <a href="index-01.html">
-                  Home Version 1
-                  </a>
-                </li>
-                <li>
-                  <a href="index-02.html">
-                  Home Version 2
-                  </a>
-                </li>
-                <li>
-                  <a href="index-03.html">
-                  Home Version 3
-                  </a>
-                </li>
-                <li>
-                  <a href="index-04.html">
-                  Home Version 4
-                  </a>
-                </li>
-                <li>
-                  <a href="index-05.html">
-                  Home Version 5
-                  </a>
-                </li>
-                <li>
-                  <a href="index-06.html">
-                  Home Version 6
-                  </a>
-                </li>
-                <li>
-                  <a href="index-07.html">
-                  Home Version 7
-                  </a>
-                </li>
-              </ul>
             </li>
             <li>
-              <a href="about.html">
-              Pages
+              <?= (substr_compare($page[3],"single-project.php",0,10) === 0) ?  "<a href='#' class='active'>" :  "<a href='#'>";?>
+                Nos magazines
               </a>
               <ul class="dropdown">
-                <li>
-                  <a href="about.php">
-                  About
-                  </a>
-                </li>
-                <li>
-                  <a href="services.html">
-                  Services
-                  </a>
-                </li>
-                <li>
-                  <a href="team.html">
-                  Team Members
-                  </a>
-                </li>
-                <li>
-                  <a href="right-sidebar.html">
-                  Right Sidebar
-                  </a>
-                </li>
-                <li>
-                  <a href="left-sidebar.html">
-                  Left Sidebar
-                  </a>
-                </li>
-                <li>
-                  <a href="faq.html">
-                  FAQ Page
-                  </a>
-                </li>
-                <li>
-                  <a href="404.html">
-                  404 Page
-                  </a>
-                </li>
+                  <?php $i = 0;?>
+                    <?php foreach ($sector as $pole => $value):?>
+                    <li>
+
+                      <a href="#">
+                      <?php echo $nav->getNavLevel0Name($i)?>
+                      </a>
+                      <?php $magazine = $nav->getNavLevel1($i)?>
+                      <ul class="sup-dropdown">
+                        <?php foreach ($magazine as $key => $value): ?>
+                        <li>
+                          <a href="single-project.php?pole=<?=$pole?>&position=<?=$key?>">
+                            <?= $nav->getNavLevel1Name($i,$key)?>
+                          </a>
+                        </li>
+                        <?php endforeach; ?>
+                      </ul>
+                    </li>
+                    <?php $i++; endforeach ?>
               </ul>
             </li>
             <li>
-              <a href="#">
-              Shortcodes
-              </a>
-              <ul class="dropdown">
-                <li>
-                  <a href="tabs.html">
-                  Tabs
-                  </a>
-                </li>
-                <li>
-                  <a href="buttons.html">
-                  Buttons
-                  </a>
-                </li>
-                <li>
-                  <a href="action-box.html">
-                  Action Box
-                  </a>
-                </li>
-                <li>
-                  <a href="testimonials.html">
-                  Testimonials
-                  </a>
-                </li>
-                <li>
-                  <a href="latest-posts.html">
-                  Latest Posts
-                  </a>
-                </li>
-                <li>
-                  <a href="latest-projects.html">
-                  Latest Projects
-                  </a>
-                </li>
-                <li>
-                  <a href="pricing.html">
-                  Pricing Tables
-                  </a>
-                </li>
-                <li>
-                  <a href="accordion-toggles.html">
-                  Accordion & Toggles
-                  </a>
-                </li>
-              </ul>
-            </li>
-            <li>
-              <a href="portfolio-3.html">
-              Portfolio
-              </a>
-              <ul class="dropdown">
-                <li>
-                  <a href="portfolio-2.html">
-                  2 Columns
-                  </a>
-                </li>
-                <li>
-                  <a href="portfolio-3.html">
-                  3 Columns
-                  </a>
-                </li>
-                <li>
-                  <a href="portfolio-4.html">
-                  4 Columns
-                  </a>
-                </li>
-                <li>
-                  <a href="single-project.html">
-                  Single Project
-                  </a>
-                </li>
-              </ul>
-            </li>
-            <li>
-              <a href="blog.html">
-              Blog
-              </a>
-              <ul class="dropdown">
-                <li>
-                  <a href="blog.html">
-                  Blog - right Sidebar
-                  </a>
-                </li>
-                <li>
-                  <a href="blog-left-sidebar.html">
-                  Blog - Left Sidebar
-                  </a>
-                </li>
-                <li><a href="blog-full-width.html">Blog - Full Width</a></li>
-                <li>
-                  <a href="single-post.html">
-                  Blog Single Post
-                  </a>
-                </li>
-              </ul>
-            </li>
-            <li>
-              <a href="contact.php">
-              Contact
+              <?= ($page[3] == "contact.php") ?  "<a href='contact.php' class='active'>" :  "<a href='contact.php'>";?>
+                Contact
               </a>
             </li>
           </ul>
