creation section meet the team

--- a/span-template/layouts/topBar.phtml
+++ b/span-template/layouts/topBar.phtml
@@ -1,4 +1,4 @@
-  <body style="background-image: url("http://localhost/Portail-EDP-Sante/span-template/assets/img/patterns/3.png");">
+  <body style="background-image: url("../assets/img/3.png");">
     <!-- Full Body Container -->
     <div id="container" class="boxed-page">
       <!-- Start Header Section -->
