--- a/span-template/layouts/footer.phtml
+++ b/span-template/layouts/footer.phtml
@@ -61,20 +61,20 @@
       </div>
     </div>
     <!-- Span JS  -->
-    <script type="text/javascript" src="assets/js/jquery-min.js"></script>
-    <script type="text/javascript" src="assets/js/modernizrr.js"></script>
-    <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="assets/js/owl.carousel.min.js"></script>
-    <script type="text/javascript" src="assets/js/nivo-lightbox.min.js"></script>
-    <script type="text/javascript" src="assets/js/jquery.mixitup.min.js"></script>
-    <script type="text/javascript" src="assets/js/jquery.appear.js"></script>
-    <script type="text/javascript" src="assets/js/count-to.js"></script>
-    <script type="text/javascript" src="assets/js/jquery.parallax.js"></script>
-    <script type="text/javascript" src="assets/js/smooth-scroll.js"></script>
-    <script type="text/javascript" src="assets/js/jquery.slicknav.js"></script>
-    <script type="text/javascript" src="assets/js/main.js"></script>
+    <script type="text/javascript" src="/assets/js/jquery-min.js"></script>
+    <script type="text/javascript" src="/assets/js/modernizrr.js"></script>
+    <script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/assets/js/owl.carousel.min.js"></script>
+    <script type="text/javascript" src="/assets/js/nivo-lightbox.min.js"></script>
+    <script type="text/javascript" src="/assets/js/jquery.mixitup.min.js"></script>
+    <script type="text/javascript" src="/assets/js/jquery.appear.js"></script>
+    <script type="text/javascript" src="/assets/js/count-to.js"></script>
+    <script type="text/javascript" src="/assets/js/jquery.parallax.js"></script>
+    <script type="text/javascript" src="/assets/js/smooth-scroll.js"></script>
+    <script type="text/javascript" src="/assets/js/jquery.slicknav.js"></script>
+    <script type="text/javascript" src="/assets/js/main.js"></script>
     <!-- Revelosition slider js -->
-    <script src="assets/js/jquery.themepunch.revolution.min.js"></script>
-    <script src="assets/js/jquery.themepunch.tools.min.js"></script>
+    <script src="/assets/js/jquery.themepunch.revolution.min.js"></script>
+    <script src="/assets/js/jquery.themepunch.tools.min.js"></script>
   </body>
 </html>
