--- a/span-template/layouts/header.phtml
+++ b/span-template/layouts/header.phtml
@@ -20,23 +20,23 @@
     <meta name="author" content="Grayrids">
 
     <!-- Bootstrap CSS  -->
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css" type="text/css" media="screen">
     <!-- Font Awesome CSS -->
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="/assets/fonts/font-awesome.min.css" type="text/css" media="screen">
     <!-- Icon -->
-    <link rel="stylesheet" href="assets/fonts/simple-line-icons.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="/assets/fonts/simple-line-icons.css" type="text/css" media="screen">
     <!-- rs style -->
-    <link rel="stylesheet" type="text/css" href="assets/css/settings.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/assets/css/settings.css" media="screen">
     <!-- Slicknav -->
-    <link rel="stylesheet" type="text/css" href="assets/css/slicknav.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/assets/css/slicknav.css" media="screen">
     <!-- Span CSS Styles  -->
-    <link rel="stylesheet" type="text/css" href="assets/css/main.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/assets/css/main.css" media="screen">
     <!-- Responsive CSS Styles  -->
-    <link rel="stylesheet" type="text/css" href="assets/css/responsive.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/assets/css/responsive.css" media="screen">
     <!-- Css3 Transitions Styles  -->
-    <link rel="stylesheet" type="text/css" href="assets/css/animate.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="/assets/css/animate.css" media="screen">
     <!-- Selected Preset -->
-    <link rel="stylesheet" type="text/css" href="assets/css/colors/bluesante.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="/assets/css/colors/bluesante.css" media="screen" >
     <!--[if IE 8]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
