--- a/span-template/layouts/nav.phtml
+++ b/span-template/layouts/nav.phtml
@@ -44,13 +44,13 @@ $page = explode('/', $url);
               <!-- Start Navigation List -->
               <ul class="nav navbar-nav navbar-right">
                 <li>
-                  <?= ($page[3] == "index.php") ?  "<a href='index.php' class='active'>" :  "<a href='index.php'>";?>
+                  <?= ($page[1] == "/index.php") ?  "<a href='/index.php' class='active'>" :  "<a href='/index.php'>";?>
                   Home
                   </a>
                 </li>
                 <li>
 
-                  <?= (substr_compare($page[3],"single-project.php",0,10) === 0) ?  "<a href='#' class='active'>" :  "<a href='#'>";?>
+                  <?= (substr_compare($page[1],"single-project.php",0,10) === 0) ?  "<a href='#' class='active'>" :  "<a href='#'>";?>
                     Nos magazines
                   </a>
                   <ul class="dropdown">
@@ -63,9 +63,10 @@ $page = explode('/', $url);
                       </a>
                       <?php $magazine = $nav->getNavLevel1($i)?>
                       <ul class="sup-dropdown">
+
                         <?php foreach ($magazine as $key => $value): ?>
                         <li>
-                          <a href="single-project.php?pole=<?=$pole?>&position=<?=$key?>">
+                          <a href="http://edp-sante.fr/magazine/<?=$pole?><?=$key?>-vgrs">
                             <?= $nav->getNavLevel1Name($i,$key)?>
                           </a>
                         </li>
@@ -75,7 +76,7 @@ $page = explode('/', $url);
                     <?php $i++; endforeach ?>
                   </ul>
                 <li>
-                  <?= ($page[3] == "contact.php") ?  "<a href='contact.php' class='active'>" :  "<a href='contact.php'>";?>
+                  <?= ($page[1] == "contact.php") ?  "<a href='contact.php' class='active'>" :  "<a href='contact.php'>";?>
                   Contact
                   </a>
                 </li>
@@ -87,12 +88,12 @@ $page = explode('/', $url);
           <!-- Mobile Menu Start -->
           <ul class="wpb-mobile-menu">
             <li>
-              <?= ($page[3] == "index.php") ?  "<a href='index.php' class='active'>" :  "<a href='index.php'>";?>
+              <?= ($page[1] == "index.php") ?  "<a href='index.php' class='active'>" :  "<a href='index.php'>";?>
               Home
               </a>
             </li>
             <li>
-              <?= (substr_compare($page[3],"single-project.php",0,10) === 0) ?  "<a href='#' class='active'>" :  "<a href='#'>";?>
+              <?= (substr_compare($page[1],"single-project.php",0,10) === 0) ?  "<a href='#' class='active'>" :  "<a href='#'>";?>
                 Nos magazines
               </a>
               <ul class="dropdown">
