réecriture url terminée

--- a/span-template/layouts/nav.phtml
+++ b/span-template/layouts/nav.phtml
@@ -76,7 +76,7 @@ $page = explode('/', $url);
                     <?php $i++; endforeach ?>
                   </ul>
                 <li>
-                  <?= ($page[1] == "contact.php") ?  "<a href='contact.php' class='active'>" :  "<a href='contact.php'>";?>
+                  <?= ($page[1] == "/contact.php") ?  "<a href='/contact.php' class='active'>" :  "<a href='/contact.php'>";?>
                   Contact
                   </a>
                 </li>
