--- a/span-template/layouts/topBar.phtml
+++ b/span-template/layouts/topBar.phtml
@@ -33,10 +33,10 @@
                     </a>
                   </li>
                   <li>
-                    <a href="#">
+                    <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#109;&#97;&#120;&#105;&#109;&#101;&#46;&#103;&#114;&#97;&#110;&#103;&#105;&#101;&#114;&#64;&#101;&#100;&#112;&#115;&#99;&#105;&#101;&#110;&#99;&#101;&#115;&#46;&#111;&#114;&#103;">
                     <i class="icon-envelope">
                     </i>
-                    Email@example.com
+                  &#109;&#97;&#120;&#105;&#109;&#101;&#46;&#103;&#114;&#97;&#110;&#103;&#105;&#101;&#114;&#64;&#101;&#100;&#112;&#115;&#99;&#105;&#101;&#110;&#99;&#101;&#115;&#46;&#111;&#114;&#103;
                     </a>
                   </li>
                 </ul>
