ajout logo + modifs HP

--- a/span-template/layouts/topBar.phtml
+++ b/span-template/layouts/topBar.phtml
@@ -13,7 +13,7 @@
                 <!-- Start Contact Info -->
                 <ul class="contact-details">
                   <li>
-                    <a href="#">
+                    <a href="/contact.php">
                     <i class="icon-pointer">
                     </i>
                   109 avenue Aristide Briand – CS 90042 – 92541 Montrouge cedex
@@ -33,10 +33,10 @@
                     </a>
                   </li>
                   <li>
-                    <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#109;&#97;&#120;&#105;&#109;&#101;&#46;&#103;&#114;&#97;&#110;&#103;&#105;&#101;&#114;&#64;&#101;&#100;&#112;&#115;&#99;&#105;&#101;&#110;&#99;&#101;&#115;&#46;&#111;&#114;&#103;">
+                    <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#99;&#111;&#110;&#116;&#97;&#99;&#116;&#64;&#101;&#100;&#112;&#115;&#97;&#110;&#116;&#101;&#46;&#102;&#114;">
                     <i class="icon-envelope">
                     </i>
-                  &#109;&#97;&#120;&#105;&#109;&#101;&#46;&#103;&#114;&#97;&#110;&#103;&#105;&#101;&#114;&#64;&#101;&#100;&#112;&#115;&#99;&#105;&#101;&#110;&#99;&#101;&#115;&#46;&#111;&#114;&#103;
+              &#99;&#111;&#110;&#116;&#97;&#99;&#116;&#64;&#101;&#100;&#112;&#115;&#97;&#110;&#116;&#101;&#46;&#102;&#114;
                     </a>
                   </li>
                 </ul>
@@ -70,7 +70,7 @@
                     </a>
                   </li>-->
                   <li>
-                    <a class="linkdin itl-tooltip" data-placement="bottom" title="Linkedin" href="https://fr.linkedin.com/in/edp-sant%C3%A9-6b78b4a5">
+                    <a class="linkdin itl-tooltip" data-placement="bottom" title="Linkedin" href="https://fr.linkedin.com/in/edp-sant%C3%A9-6b78b4a5" target="_blank">
                     <i class="fa fa-linkedin">
                     </i>
                     </a>
