--- a/span-template/assets/css/main.css
+++ b/span-template/assets/css/main.css
@@ -1388,6 +1388,17 @@ ul.social-list li a.vimeo:hover {
 .tema-member .team-thumbnail .social-media a.linkedin:hover i {
   background: #90CADD;
 }
+
+ .tema-member .overlay .info {
+  padding: 120px 20px;
+  opacity: 1;
+  -webkit-transition: all 0.9s ease-in-out;
+  -moz-transition: all 0.9s ease-in-out;
+  -ms-transition: all 0.9s ease-in-out;
+  -o-transition: all 0.9s ease-in-out;
+  transition: all 0.9s ease-in-out;
+}
+
 .tema-member .info h4 {
   font-size: 14px;
   font-weight: 600;
