--- a/span-template/layouts/topBar.phtml
+++ b/span-template/layouts/topBar.phtml
@@ -33,10 +33,10 @@
                     </a>
                   </li>
                   <li>
-                    <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#99;&#111;&#110;&#116;&#97;&#99;&#116;&#64;&#101;&#100;&#112;&#115;&#97;&#110;&#116;&#101;&#46;&#102;&#114;">
+                    <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#99;&#111;&#110;&#116;&#97;&#99;&#116;&#45;&#101;&#100;&#112;&#115;&#64;&#101;&#100;&#112;&#115;&#97;&#110;&#116;&#101;&#46;&#102;&#114;">
                     <i class="icon-envelope">
                     </i>
-              &#99;&#111;&#110;&#116;&#97;&#99;&#116;&#64;&#101;&#100;&#112;&#115;&#97;&#110;&#116;&#101;&#46;&#102;&#114;
+          &#99;&#111;&#110;&#116;&#97;&#99;&#116;&#45;&#101;&#100;&#112;&#115;&#64;&#101;&#100;&#112;&#115;&#97;&#110;&#116;&#101;&#46;&#102;&#114;
                     </a>
                   </li>
                 </ul>
